--- a/.github/workflows/profile-3d.env
+++ b/.github/workflows/profile-3d.env
@@ -8,13 +8,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: generate-github-profile-3d-contrib
+    name: generate-github-profile-3d-contrib/profile-3d-contrib/profile-night-view.svg
     steps:
       - uses: actions/checkout@v3
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
           GITHUB_TOKEN: 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
           USERNAME: ErickPrado101
+          SETTING_JSON: yoshi389111/github-profile-3d-contrib/profile-3d-contrib/profile-night-view.svg
       - name: Commit & Push
         run: |
           git config user.name github-actions
