--- a/.github/workflows/profile-3d.env
+++ b/.github/workflows/profile-3d.env
@@ -5,21 +5,23 @@ on:
     - cron: "0 03 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: generate-github-profile-3d-contrib/profile-3d-contrib/profile-night-view.svg
+    name: generate-github-profile-3d-contrib
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
-          GITHUB_TOKEN: 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
           USERNAME: ErickPrado101
-          SETTING_JSON: yoshi389111/github-profile-3d-contrib/profile-3d-contrib/profile-night-view.svg
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Commit & Push
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add -A .
-          git commit -m "generated"
+          git commit -m "chore: generate 3d contribution graph" || exit 0
           git push
