--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -24,6 +24,15 @@ jobs:
           USERNAME: ErickPrado101
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Crop SVG (remove side chart)
+        run: |
+          if [ -d "profile-3d-contrib" ]; then
+            for f in profile-3d-contrib/*.svg; do
+              [ -f "$f" ] || continue
+              perl -0777 -i -pe 's/width="1280"/width="980"/g; s/viewBox="0 0 1280 850"/viewBox="0 0 980 850"/g' "$f"
+            done
+          fi
+
       - name: Commit & Push
         run: |
           git config user.name github-actions
