fix: avoid push conflicts and adjust crop

--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: profile-3d-contrib
+  cancel-in-progress: true
+
 permissions:
   contents: write
 
@@ -29,7 +33,7 @@ jobs:
           if [ -d "profile-3d-contrib" ]; then
             for f in profile-3d-contrib/*.svg; do
               [ -f "$f" ] || continue
-              perl -0777 -i -pe 's/width="1280"/width="980"/g; s/viewBox="0 0 1280 850"/viewBox="0 0 980 850"/g' "$f"
+              perl -0777 -i -pe 's/width="1280"/width="1150"/g; s/viewBox="0 0 1280 850"/viewBox="0 0 1150 850"/g' "$f"
             done
           fi
 
@@ -37,6 +41,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git pull --rebase origin main || true
           git add -A .
           git commit -m "chore: generate 3d contribution graph" || exit 0
           git push
