--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -21,6 +21,8 @@ jobs:
     name: generate-github-profile-3d-contrib
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Generate 3D profile
         uses: yoshi389111/github-profile-3d-contrib@0.7.1
@@ -41,7 +43,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git pull --rebase origin main || true
+          git pull --rebase --autostash origin main || true
           git add -A .
           git commit -m "chore: generate 3d contribution graph" || exit 0
-          git push
+          git push || (git pull --rebase --autostash origin main && git push)
