--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -35,7 +35,7 @@ jobs:
           if [ -d "profile-3d-contrib" ]; then
             for f in profile-3d-contrib/*.svg; do
               [ -f "$f" ] || continue
-              perl -0777 -i -pe 's/<g[^>]*>\s*<text[^>]*>TypeScript.*?<\/g>//sg; s/<g\s+transform="translate\(130,\s*130\)">.*?<\/g>//sg' "$f"
+              perl -0777 -i -pe 's/<g[^>]*>\s*<text[^>]*>TypeScript.*?<\/g>\s*//sg; s/<g\s+transform="translate\(130,\s*130\)">.*?<\/g>\s*//sg' "$f"
             done
           fi
 
